--- a/css/main.css
+++ b/css/main.css
@@ -10,3 +10,15 @@ div {
   max-width: 25em;
   padding: 2em;
 }
+
+p {
+  margin: 1.5rem;
+}
+
+a {
+  margin: 1.5rem;
+}
+
+h2 {
+  margin: 1.5rem;
+}
