--- a/css/main.css
+++ b/css/main.css
@@ -5,20 +5,45 @@ html {
   line-height: 1.5;
 }
 
+h2 {
+  font-family: "Lato", bold;
+  margin: 1.5rem;
+}
+
 div {
   display: inline-block;
   max-width: 25em;
   padding: 2em;
 }
 
+img {
+  display: inline-block;
+  width: auto;
+  vertical-align: middle;
+}
+section{
+  display: block;
+}
+
 p {
+  display: inline-block;
   margin: 1.5rem;
+  width: auto;
 }
 
 a {
   margin: 1.5rem;
+  display: inline-block;
+  border-radius: 6px;
+  border: 3px solid #333;
+  list-style-type: none;
+  padding: .4em .75em .5em;
+  text-decoration: none;
+  color: #333;
+  text-align: center;
 }
 
-h2 {
-  margin: 1.5rem;
+a:hover {
+  background-color: #333;
+  color: #fff;
 }
